// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inactive-color prop 1`] = `
<div role="switch" aria-checked="false" class="ghb-switch" style="background-color: black;">
  <div class="ghb-switch__node"></div>
</div>
`;

exports[`size prop 1`] = `
<div role="switch" aria-checked="false" class="ghb-switch" style="font-size: 20px;">
  <div class="ghb-switch__node"></div>
</div>
`;
